[package]
name = "data_races"
version = "0.1.0"
authors = ["David McGuire <david.mcguire@joylabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "data_race00"
path = "./src/data_race00.rs"

[[bin]]
name = "data_race01"
path = "./src/data_race01.rs"

[[bin]]
name = "data_race02"
path = "./src/data_race02.rs"

[[bin]]
name = "data_race03"
path = "./src/data_race03.rs"
